package protobuf

func GetSampleData() *UserManagementResponse {
	return &UserManagementResponse{
		ApiVersion:  "v2.1.0",
		Timestamp:   "2025-07-18T14:30:45.123Z",
		RequestId:   "req_7d8f9e2a1b4c5f6g7h8i9j0k",
		Environment: "production",
		Region:      "us-east-1",
		Pagination: &Pagination{
			Page:        1,
			PerPage:     50,
			TotalPages:  3,
			TotalCount:  143,
			HasNext:     true,
			HasPrevious: false,
		},
		Metadata: &Metadata{
			ExecutionTimeMs: 234,
			CacheHit:        false,
			DatabaseQueries: 7,
			MemoryUsageMb:   45.2,
			CpuUsagePercent: 12.8,
		},
		Users: []*User{
			{
				Id:               "usr_9f8e7d6c5b4a3f2e1d0c9b8a",
				Username:         "alexandra.chen",
				Email:            "alexandra.chen@company.com",
				FirstName:        "Alexandra",
				LastName:         "Chen",
				DisplayName:      "Alex Chen",
				AvatarUrl:        "https://cdn.company.com/avatars/alexandra_chen.jpg",
				Status:           "active",
				EmailVerified:    true,
				PhoneVerified:    false,
				TwoFactorEnabled: true,
				CreatedAt:        "2023-02-15T09:30:00Z",
				UpdatedAt:        "2025-07-17T16:45:30Z",
				LastLogin:        "2025-07-18T08:15:22Z",
				LoginCount:       847,
				Profile: &Profile{
					Bio:            "Senior Software Engineer with 8+ years of experience in distributed systems and cloud architecture. Passionate about building scalable solutions.",
					Location:       "San Francisco, CA",
					Timezone:       "America/Los_Angeles",
					Language:       "en-US",
					DateFormat:     "MM/DD/YYYY",
					TimeFormat:     "12h",
					Company:        "TechCorp Inc.",
					Department:     "Engineering",
					Title:          "Senior Software Engineer",
					ManagerId:      "usr_1a2b3c4d5e6f7g8h9i0j1k2l",
					HireDate:       "2023-02-15",
					SalaryBand:     "L5",
					EmploymentType: "full_time",
				},
				Permissions: &Permissions{
					Roles:  []string{"engineer", "code_reviewer", "deployment_approver"},
					Groups: []string{"frontend_team", "platform_team", "on_call_rotation"},
					AccessLevels: &AccessLevels{
						Repositories:  []string{"read", "write", "admin"},
						Environments:  []string{"development", "staging"},
						SensitiveData: false,
						AdminPanel:    false,
						Billing:       false,
					},
					FeatureFlags: &FeatureFlags{
						NewDashboard:      true,
						ExperimentalAi:    true,
						BetaMobileApp:     false,
						AdvancedAnalytics: true,
					},
				},
				Activity: &Activity{
					Last_30Days: &ActivityStats{
						Logins:         28,
						Commits:        156,
						PullRequests:   23,
						CodeReviews:    45,
						Deployments:    12,
						SupportTickets: 3,
					},
					RecentActions: []*RecentAction{
						{
							Action:    "code_review_approved",
							Resource:  "PR #1247: Implement user authentication cache",
							Timestamp: "2025-07-18T13:45:00Z",
							IpAddress: "192.168.1.100",
						},
						{
							Action:    "deployment_triggered",
							Resource:  "staging environment",
							Timestamp: "2025-07-18T12:30:15Z",
							IpAddress: "192.168.1.100",
						},
						{
							Action:    "repository_cloned",
							Resource:  "user-service-v2",
							Timestamp: "2025-07-18T10:20:45Z",
							IpAddress: "192.168.1.100",
						},
					},
				},
				Preferences: &Preferences{
					Notifications: &NotificationSettings{
						Email: &EmailNotifications{
							SystemUpdates:    true,
							SecurityAlerts:   true,
							TeamMentions:     true,
							DeploymentStatus: true,
							WeeklySummary:    false,
						},
						Slack: &SlackNotifications{
							DirectMessages: true,
							TeamChannels:   true,
							UrgentAlerts:   true,
						},
						Mobile: &MobileNotifications{
							PushEnabled: false,
							QuietHours: &QuietHours{
								Enabled: true,
								Start:   "22:00",
								End:     "08:00",
							},
						},
					},
					Ui: &UISettings{
						Theme:             "dark",
						SidebarCollapsed:  false,
						CompactMode:       true,
						AnimationsEnabled: true,
					},
				},
			},
			{
				Id:               "usr_8e7d6c5b4a3f2e1d0c9b8a7f",
				Username:         "michael.rodriguez",
				Email:            "michael.rodriguez@company.com",
				FirstName:        "Michael",
				LastName:         "Rodriguez",
				DisplayName:      "Mike Rodriguez",
				AvatarUrl:        "https://cdn.company.com/avatars/michael_rodriguez.jpg",
				Status:           "active",
				EmailVerified:    true,
				PhoneVerified:    true,
				TwoFactorEnabled: true,
				CreatedAt:        "2022-11-08T14:20:00Z",
				UpdatedAt:        "2025-07-16T11:30:45Z",
				LastLogin:        "2025-07-17T19:45:12Z",
				LoginCount:       1205,
				Profile: &Profile{
					Bio:            "Product Manager focused on user experience and data-driven decisions. Building products that users love.",
					Location:       "Austin, TX",
					Timezone:       "America/Chicago",
					Language:       "en-US",
					DateFormat:     "DD/MM/YYYY",
					TimeFormat:     "24h",
					Company:        "TechCorp Inc.",
					Department:     "Product",
					Title:          "Senior Product Manager",
					ManagerId:      "usr_2b3c4d5e6f7g8h9i0j1k2l3m",
					HireDate:       "2022-11-08",
					SalaryBand:     "L6",
					EmploymentType: "full_time",
				},
				Permissions: &Permissions{
					Roles:  []string{"product_manager", "analytics_viewer", "user_researcher"},
					Groups: []string{"product_team", "growth_team", "executive_dashboard"},
					AccessLevels: &AccessLevels{
						Repositories:  []string{"read"},
						Environments:  []string{"development", "staging", "production"},
						SensitiveData: true,
						AdminPanel:    true,
						Billing:       false,
					},
					FeatureFlags: &FeatureFlags{
						NewDashboard:      true,
						ExperimentalAi:    false,
						BetaMobileApp:     true,
						AdvancedAnalytics: true,
					},
				},
				Activity: &Activity{
					Last_30Days: &ActivityStats{
						Logins:         25,
						Commits:        0,
						PullRequests:   0,
						CodeReviews:    8,
						Deployments:    0,
						SupportTickets: 12,
					},
					RecentActions: []*RecentAction{
						{
							Action:    "analytics_report_generated",
							Resource:  "User Engagement Q3 2025",
							Timestamp: "2025-07-17T18:30:00Z",
							IpAddress: "10.0.1.50",
						},
						{
							Action:    "feature_flag_updated",
							Resource:  "beta_mobile_app enabled for 10% users",
							Timestamp: "2025-07-17T15:45:30Z",
							IpAddress: "10.0.1.50",
						},
						{
							Action:    "user_feedback_reviewed",
							Resource:  "Mobile app feedback batch #447",
							Timestamp: "2025-07-17T14:20:15Z",
							IpAddress: "10.0.1.50",
						},
					},
				},
				Preferences: &Preferences{
					Notifications: &NotificationSettings{
						Email: &EmailNotifications{
							SystemUpdates:    false,
							SecurityAlerts:   true,
							TeamMentions:     true,
							DeploymentStatus: false,
							WeeklySummary:    true,
						},
						Slack: &SlackNotifications{
							DirectMessages: true,
							TeamChannels:   false,
							UrgentAlerts:   true,
						},
						Mobile: &MobileNotifications{
							PushEnabled: true,
							QuietHours: &QuietHours{
								Enabled: false,
								Start:   "23:00",
								End:     "07:00",
							},
						},
					},
					Ui: &UISettings{
						Theme:             "light",
						SidebarCollapsed:  true,
						CompactMode:       false,
						AnimationsEnabled: false,
					},
				},
			},
			{
				Id:               "usr_7d6c5b4a3f2e1d0c9b8a7f6e",
				Username:         "sarah.johnson",
				Email:            "sarah.johnson@company.com",
				FirstName:        "Sarah",
				LastName:         "Johnson",
				DisplayName:      "Sarah Johnson",
				AvatarUrl:        "https://cdn.company.com/avatars/sarah_johnson.jpg",
				Status:           "active",
				EmailVerified:    true,
				PhoneVerified:    true,
				TwoFactorEnabled: true,
				CreatedAt:        "2021-05-22T10:15:00Z",
				UpdatedAt:        "2025-07-18T09:20:30Z",
				LastLogin:        "2025-07-18T09:20:30Z",
				LoginCount:       2156,
				Profile: &Profile{
					Bio:            "Engineering Manager with extensive experience in team leadership and system architecture. Focused on building high-performing engineering teams.",
					Location:       "New York, NY",
					Timezone:       "America/New_York",
					Language:       "en-US",
					DateFormat:     "YYYY-MM-DD",
					TimeFormat:     "24h",
					Company:        "TechCorp Inc.",
					Department:     "Engineering",
					Title:          "Engineering Manager",
					ManagerId:      "usr_3c4d5e6f7g8h9i0j1k2l3m4n",
					HireDate:       "2021-05-22",
					SalaryBand:     "M1",
					EmploymentType: "full_time",
				},
				Permissions: &Permissions{
					Roles:  []string{"engineering_manager", "hiring_manager", "performance_reviewer"},
					Groups: []string{"management_team", "platform_team", "hiring_committee"},
					AccessLevels: &AccessLevels{
						Repositories:  []string{"read", "write", "admin"},
						Environments:  []string{"development", "staging", "production"},
						SensitiveData: true,
						AdminPanel:    true,
						Billing:       true,
					},
					FeatureFlags: &FeatureFlags{
						NewDashboard:      true,
						ExperimentalAi:    true,
						BetaMobileApp:     true,
						AdvancedAnalytics: true,
					},
				},
				Activity: &Activity{
					Last_30Days: &ActivityStats{
						Logins:         30,
						Commits:        45,
						PullRequests:   8,
						CodeReviews:    89,
						Deployments:    25,
						SupportTickets: 15,
					},
					RecentActions: []*RecentAction{
						{
							Action:    "team_meeting_scheduled",
							Resource:  "Sprint Planning - Sprint 47",
							Timestamp: "2025-07-18T09:00:00Z",
							IpAddress: "172.16.0.25",
						},
						{
							Action:    "performance_review_submitted",
							Resource:  "Q2 2025 - Alexandra Chen",
							Timestamp: "2025-07-17T16:30:45Z",
							IpAddress: "172.16.0.25",
						},
						{
							Action:    "infrastructure_approval",
							Resource:  "AWS RDS scaling for user-db-prod",
							Timestamp: "2025-07-17T14:15:20Z",
							IpAddress: "172.16.0.25",
						},
					},
				},
				Preferences: &Preferences{
					Notifications: &NotificationSettings{
						Email: &EmailNotifications{
							SystemUpdates:    true,
							SecurityAlerts:   true,
							TeamMentions:     true,
							DeploymentStatus: true,
							WeeklySummary:    true,
						},
						Slack: &SlackNotifications{
							DirectMessages: true,
							TeamChannels:   true,
							UrgentAlerts:   true,
						},
						Mobile: &MobileNotifications{
							PushEnabled: true,
							QuietHours: &QuietHours{
								Enabled: true,
								Start:   "21:00",
								End:     "07:00",
							},
						},
					},
					Ui: &UISettings{
						Theme:             "auto",
						SidebarCollapsed:  false,
						CompactMode:       true,
						AnimationsEnabled: true,
					},
				},
			},
		},
		SystemMetrics: &SystemMetrics{
			ActiveUsersLast_24H:           1247,
			TotalLoginsToday:              3456,
			FailedLoginAttempts:           23,
			PasswordResetsRequested:       7,
			NewUserRegistrations:          12,
			AverageSessionDurationMinutes: 127,
			FeatureAdoptionRates: map[string]float64{
				"new_dashboard":      0.78,
				"experimental_ai":    0.34,
				"beta_mobile_app":    0.12,
				"advanced_analytics": 0.89,
			},
		},
		SecuritySummary: &SecuritySummary{
			SuspiciousActivities: 0,
			BlockedIps:           []string{"203.0.113.45", "198.51.100.78"},
			SecurityAlerts: []*SecurityAlert{
				{
					Id:        "alert_789",
					Type:      "multiple_failed_logins",
					UserId:    "usr_4d5e6f7g8h9i0j1k2l3m4n5o",
					Timestamp: "2025-07-18T06:30:00Z",
					Severity:  "medium",
					Resolved:  true,
				},
			},
			ComplianceStatus: &ComplianceStatus{
				GdprCompliant: true,
				SoxCompliant:  true,
				LastAudit:     "2025-06-15T00:00:00Z",
				NextAudit:     "2025-09-15T00:00:00Z",
			},
		},
	}
}
